main-product section: 1) fixed right container img 2) added padding to containers 3) aligned text in text containers to center

--- a/webDev/Projects/flexbox-business-site-starting/Resources/css/styles.css
+++ b/webDev/Projects/flexbox-business-site-starting/Resources/css/styles.css
@@ -179,6 +179,7 @@ section#main-product div.container {
     display: flex;
     flex-wrap: wrap;
     width: 90%;
+    padding: 3%;
     aspect-ratio: 1/ 1.15;
     background-color: #FBFAFA;
     border-radius: 15px;
@@ -214,6 +215,7 @@ section#main-product div.text {
     color: black;
     line-height: 1.5;
     overflow: scroll;
+    text-align: center;
 }
 
 section#main-product div.text p {
@@ -258,16 +260,18 @@ section#main-product div.container.left div.container.img {
 section#main-product div.container.right div.container.img {
     margin-right: 10%;
     margin-bottom: 5%;
-    background-color: #998FAF;
+    background-color: #CE2558;
 }
 
-section#main-product div.container.img img {
+section#main-product div.container.left div.container.img img {
     width: 100%;
     height: 100%;
     mix-blend-mode: lighten;
 }
 
 section#main-product div.container.right div.container.img img{
+    width: 80%;
+    height: 70%;
     mix-blend-mode:normal;
 }
 
